<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sharing UseCases</string>
    <string name="sharing_activity">Sharing UseCases</string>
    <string name="description">Select Display and ...</string>
    <string name="start_mirror">Start Mirroring</string>
    <string name="stop_mirror">Stop Mirroring</string>
    <string name="serve">Start Serving</string>
    <string name="recommend">Give Recommendation</string>
    <string name="touchable">open for input</string>
    <string name="untouchable">input locked</string>
    <string name="cid">Central\nDisplay</string>
    <string name="padi">Passenger\nDisplay</string>
    <string name="app_title" translatable="false">Kitchen Sink</string>
    <string name="toast_item_pinned_message" translatable="false">%s pinned.</string>
    <string name="toast_item_unpinned_message" translatable="false">%s unpinned.</string>
    <string name="bluetooth_notif_ticker" translatable="false">Bluetooth pairing request</string>
    <string name="bluetooth_device_context_pair_connect" translatable="false">Pair &amp; connect</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="bluetooth_pairing_key_msg" translatable="false">Bluetooth pairing code</string>
    <string name="bluetooth_enable_alphanumeric_pin" translatable="false">PIN contains letters or symbols</string>
    <string name="bluetooth_enter_passkey_msg" translatable="false">Type the pairing code then press Return or Enter</string>
    <string name="bluetooth_pairing_request" translatable="false">Pair with <xliff:g id="device_name">%1$s</xliff:g>?</string>
    <string name="bluetooth_pairing_shares_phonebook" translatable="false">Allow <xliff:g id="device_name">%1$s</xliff:g> to access your contacts and call history</string>
    <string name="bluetooth_enter_pin_other_device" translatable="false">You may also need to type this PIN on the other device.</string>
    <string name="bluetooth_enter_passkey_other_device" translatable="false">You may also need to type this passkey on the other device.</string>
    <string name="bluetooth_pin_values_hint_16_digits" translatable="false">Must be 16 digits</string>
    <string name="bluetooth_pin_values_hint" translatable="false">Usually 0000 or 1234</string>
    <string name="bluetooth_notif_title" translatable="false">Pairing request</string>
    <string name="bluetooth_notif_message" translatable="false">Tap to pair with <xliff:g id="device_name">%1$s</xliff:g>.</string>
    <string name="bluetooth_error_title" translatable="false"></string>
    <string name="hvac_acOff" translatable="false">AC OFF</string>
    <string name="hvac_acOn" translatable="false">AC ON</string>
    <string name="hvac_autoOff" translatable="false">Auto OFF</string>
    <string name="hvac_autoOn" translatable="false">Auto ON</string>
    <string name="hvac_autoRecircOff" translatable="false">Auto Recirc OFF</string>
    <string name="hvac_autoRecircOn" translatable="false">Auto Recirc ON</string>
    <string name="hvac_defrostFrontOff" translatable="false">Front Defrost OFF</string>
    <string name="hvac_defrostFrontOn" translatable="false">Front Defrost ON</string>
    <string name="hvac_defrostRearOff" translatable="false">Rear Defrost OFF</string>
    <string name="hvac_defrostRearOn" translatable="false">Rear Defrost ON</string>
    <string name="hvac_dualOff" translatable="false">Dual OFF</string>
    <string name="hvac_dualOn" translatable="false">Dual ON</string>
    <string name="hvac_maxAcOff" translatable="false">Max AC OFF</string>
    <string name="hvac_maxAcOn" translatable="false">Max AC ON</string>
    <string name="hvac_maxDefrostOff" translatable="false">Max DEF OFF</string>
    <string name="hvac_maxDefrostOn" translatable="false">Max DEF ON</string>
    <string name="hvac_outsideTempLabel" translatable="false">Outside Temp:</string>
    <string name="hvac_positionFace" translatable="false">Face</string>
    <string name="hvac_positionFloor" translatable="false">Floor</string>
    <string name="hvac_positionFaceAndFloor" translatable="false">Face+Floor</string>
    <string name="hvac_positionDefrost" translatable="false">Defrost</string>
    <string name="hvac_positionDefrostAndFloor" translatable="false">Def+Floor</string>
    <string name="hvac_powerOff" translatable="false">Power OFF</string>
    <string name="hvac_powerOn" translatable="false">Power ON</string>
    <string name="hvac_powerAndAcOn" translatable="false">Turn Power And AC ON</string>
    <string name="hvac_fanSpeedDn" translatable="false">Fan Speed Down</string>
    <string name="hvac_fanSpeedUp" translatable="false">Fan Speed Up</string>
    <string name="hvac_recircOff" translatable="false">Recirc OFF</string>
    <string name="hvac_recircOn" translatable="false">Recirc ON</string>
    <string name="hvac_tempDisplayCelsius" translatable="false">Temp CELSIUS</string>
    <string name="hvac_tempDisplayFahrenheit" translatable="false">Temp FAHRENHEIT</string>
    <string name="hvac_aTempDn" translatable="false">All Temp Down</string>
    <string name="hvac_aTempUp" translatable="false">All Temp Up</string>
    <string name="hvac_dTempDn" translatable="false">Driver Temp Down</string>
    <string name="hvac_dTempUp" translatable="false">Driver Temp Up</string>
    <string name="hvac_pTempDn" translatable="false">Passenger Temp Down</string>
    <string name="hvac_pTempUp" translatable="false">Passenger Temp Up</string>
    <string name="rvc_getCapabilities" translatable="false">Get Capabilities</string>
    <string name="rvc_getRvcCrop" translatable="false">Get RVC Crop</string>
    <string name="rvc_setRvcCrop" translatable="false">Set RVC Crop</string>
    <string name="rvc_getRvcPos" translatable="false">Get RVC Pos</string>
    <string name="rvc_setRvcPos" translatable="false">Set RVC Pos</string>
    <string name="rvc_getCameraState" translatable="false">Get State</string>
    <string name="rvc_setCameraState" translatable="false">Set State</string>
    <string name="rvc_state" translatable="false">RVC State</string>
    <string name="empty" translatable="false"></string>
    <string name="play" translatable="false">Play</string>
    <string name="play_pcm_once" translatable="false">Play Once</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="play_wav" translatable="false">Play WAV</string>
    <string name="stop_wav" translatable="false">Stop WAV</string>
    <string name="audio_focus" translatable="false">Audio Focus</string>
    <string name="focus_gain" translatable="false">Gain</string>
    <string name="focus_gain_transient" translatable="false">Gain (Transient)</string>
    <string name="focus_gain_transient_duck" translatable="false">Gain (Transient, May Duck)</string>
    <string name="focus_gain_transient_exclusive" translatable="false">Gain (Transient, Exclusive)</string>
    <string name="focus_release" translatable="false">Release</string>
    <string name="request" translatable="false">request</string>
    <string name="release" translatable="false">release</string>
    <string name="media_play" translatable="false">Media Play</string>
    <string name="hw_audio_source_title" translatable="false">HwAudioSource</string>
    <string name="hw_audio_source_not_found" translatable="false">Not found</string>
    <string name="media_with_delayed_focus" translatable="false">Media With Delayed Focus</string>
    <string name="player_not_started" translatable="false">Player Not Started</string>
    <string name="audio_device_selected" translatable="false">Device: %1$s</string>
    <string name="long_device_name" translatable="false">VERY_LONG_NAME_DEVICE_THAT_FITS</string>
    <string name="player_paused" translatable="false">Player Paused</string>
    <string name="player_started" translatable="false">Player Started</string>
    <string name="player_delayed" translatable="false">Player Delayed</string>
    <string name="player_stopped" translatable="false">Player Stopped</string>
    <string name="player_status_title" translatable="false">Player Status</string>
    <string name="nav_play" translatable="false">Nav Play</string>
    <string name="vr_play" translatable="false">VR Play</string>
    <string name="system_play" translatable="false">System Play</string>
    <string name="config_index" translatable="false">Config Index</string>
    <string name="choose_config" translatable="false">Choose config</string>
    <string name="audio_stress_title" translatable="false">Audio Stress Test</string>
    <string name="nav_start" translatable="false">Nav Start</string>
    <string name="nav_end" translatable="false">Nav End</string>
    <string name="vr_start" translatable="false">VR Start</string>
    <string name="vr_end" translatable="false">VR End</string>
    <string name="radio_start" translatable="false">Radio Start</string>
    <string name="radio_end" translatable="false">Radio End</string>
    <string name="speaker_phone_on" translatable="false">Speaker Phone On</string>
    <string name="speaker_phone_off" translatable="false">Speaker Phone Off</string>
    <string name="microphone_on" translatable="false">Mic On</string>
    <string name="microphone_off" translatable="false">Mic Off</string>
    <string name="mock_audio_on" translatable="false">Audio Mocking On</string>
    <string name="mock_audio_off" translatable="false">Audio Mocking Off</string>
    <string name="select_zone_to_hear_on_speaker" translatable="false">Select Zone to hear on speaker</string>
    <string name="select_device" translatable="false">Select Device</string>
    <string name="activity_current_zone_id" translatable="false">Activity\'s current audio zone id</string>
    <string name="no_zone" translatable="false">none</string>
    <string name="phone_audio_player" translatable="false">Phone Player</string>
    <string name="track_audio_player" translatable="false">Track Player Tone Generator </string>
    <string name="select_tone_to_hear_on_speaker" translatable="false">Tone</string>
    <string name="file_path" translatable="false">File Path</string>
    <string name="stop_recording" translatable="false">Stop Recording</string>
    <string name="start_recording" translatable="false">Start Recording</string>
    <string name="start_service" translatable="false">Start Service</string>
    <string name="stop_service" translatable="false">Stop Service</string>
    <string name="volume_key_events" translatable="false">Key Events</string>
    <string name="select_user_title" translatable="false">Select User</string>
    <string name="reset_user" translatable="false">Reset User</string>
    <string name="assign_user" translatable="false">Assign User</string>
    <string name="unassign_user" translatable="false">Unassign User</string>
    <string name="user_focus_unknown" translatable="false">Audio Focus Unknown</string>
    <string name="user_has_focus" translatable="false">User Has Audio Focus</string>
    <string name="user_does_not_have_focus" translatable="false">User Does Not Have Audio Focus</string>
    <string name="allow_passenger_playback_confirmation" translatable="false">Allow Passenger %1$s To Play Audio In Main Cabin?</string>
    <string name="request_result_message" translatable="false">Passenger %1$s %2$s To Play Audio In Main Cabin.</string>
    <string name="accept" translatable="false">Accept</string>
    <string name="reject" translatable="false">Reject</string>
    <string name="close" translatable="false">Close</string>
    <string name="cancel_request" translatable="false">Cancel Request</string>
    <string name="assign_audio_accept_audio" translatable="false">Auto Accept Request</string>
    <string name="assign_audio_reject_audio" translatable="false">Auto Reject Request</string>
    <string name="assign_audio_ask_user" translatable="false">Ask User To Accept/Reject</string>
</resources>